--- a/src/components/ControlPane/ControlPane.module.css
+++ b/src/components/ControlPane/ControlPane.module.css
@@ -9,6 +9,7 @@
     a little gross, but we haven't seen the tools
     to deal with it yet!
   */
+  isolation: isolate;
   margin-bottom: 32px;
 }
 
